# report-open-trades

./: CMakeLists.txt
include/: PluginInterface.h  PluginInterface.hpp
src/: PluginInterface.cpp  Utils.cpp
src/utils/: Utils.cpp  Utils.h  Utils.hpp
